# termfind

./: README.md  __main__.py  pyproject.toml
termfind/: cli.py  config.py  glossary.py
termfind/.github/workflows/: build.yml
