[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "termfind"
version = "1.0.0"
description = "Look up key term definitions from a glossary file."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
termfind = "termfind.cli:main"

[tool.setuptools.packages.find]
where = ["."]
